--- a/trablaEditable/main.css
+++ b/trablaEditable/main.css
@@ -1,5 +1,5 @@
 table, tr, th, td{
-    border: solid 2px black;
+    border: solid 2px white;
     border-collapse: collapse;
     margin-top: 20px;
     padding-left: 10px;
@@ -10,13 +10,23 @@ table, tr, th, td{
 
 table{
     width: 80%;
+    color: white;
 }
+
+body{
+    background-color: black;
+}
+
 
 *{
     margin: auto;
 }
 
 button{
-    margin-left: 30%;
+    margin-left: 11%;
     margin-top: 100px;
+    align-items: center;
+    width: 10%;
+    padding: 10px;
 }
+
